--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -1,10 +1,5 @@
-<p>
-  heroes works!
-</p>
-<!-- <h1>
-  {{hero.id}}
-  {{hero.name}}
-</h1> -->
-<h2>{{hero.name | uppercase}} Details</h2>
-<div>Id : {{hero.id}}</div>
-<div>Name : <input [(ngModel)]="hero.name" type="text" placeholder="name" > {{hero.name}}</div>
+
+<ul class="heroes">
+  <li *ngFor="let hero of heroes" [class.slected]="hero === selectedHero" (click)=onSelect(hero)><span class="badge">{{hero.id}}</span> {{hero.name}}</li>
+</ul>
+<app-hero-detail [hero]="selectedHero"></app-hero-detail>
